--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 // $maincolor:#15023a;
 $maincolor:#1e1630;
-$startcolor:#cbb9e9;
+// $startcolor:#ebe5f4;
+$startcolor:rgb(186, 232, 253);
 $width:800px;
 
 
