--- a/src/component/contact/contact.scss
+++ b/src/component/contact/contact.scss
@@ -1,5 +1,5 @@
-
 @import "../../global.scss";
+
 .contact{
 
     background-color: $startcolor;
@@ -17,7 +17,10 @@
     }
 img{
 
-height: 100%;
+height: 50%;
+margin-top: 180px;
+margin-left: 50px;
+
 
 }
 }
@@ -41,42 +44,17 @@ h2 {
         font-size: 50px;
         }
   }
-form{
+img{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:space-around;
-    width: 70%;
-    height: 70%;
-   
-    @include mobile{
-        width: 100%;
-        height: 65%;
-    }
+    width: 100px;
+    height: 100px;
 
-input{
-
-    width: 300px;
-    height: 30px;
-    font-size: 14px;
-    @include mobile{
-        width: 200px;
-    }
+  
 
 
-}
-textarea{
-
-    width: 300px;
-    height: 200px;
-    font-size: 14px;
-    @include mobile{
-        width: 100%;
-    }
-
-
-
-}
 
 button{
     width: 150px;
@@ -96,3 +74,26 @@ span{
 
 }
 }
+
+// .contact {
+//   display: flex;
+//   flex:1;
+//   flex-direction: column;
+
+ 
+//   .headingContainer {
+//     justify-content: center;
+//     align-items: center;
+//     // flex:1
+//     background: #000;
+//     width: 100%;
+//     height: 12h;
+//     // margin-left: 200px;
+    
+//     // .heading{
+
+
+//     // }
+//   }
+
+// }
