--- a/src/component/intro/intro.scss
+++ b/src/component/intro/intro.scss
@@ -20,14 +20,20 @@
 
 
     img {
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
       border-radius: 100%;
+      background: rgb(225, 105, 125);
+    
+     
+     
       @include mobile{
         width: 200px;
         height: 200px;
       }
+     
     }
+    
 
     flex: 0.5;
   }
