--- a/src/component/projects/projects.scss
+++ b/src/component/projects/projects.scss
@@ -8,11 +8,13 @@
   h2 {
     font-size: 65px;
     font-weight: 600;
+    height: 20vh;
     &::-webkit-scrollbar {
       display: none;
     }
     @include mobile {
       font-size: 50px;
+      height: 10vh;
     }
   }
   .container {
@@ -22,14 +24,16 @@
     flex-wrap: wrap;
     align-items: center;
     margin: auto;
+   
 
     &::-webkit-scrollbar {
       display: none;
     }
 
     @include mobile {
-      height: 400px;
+      height: 600px;
       width: 100%;
+      margin-top: 50px;
       // margin-right: 20px;
       
     }
